--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div id="container">
       <div class="scores">
         <span id="score" class="unselectable" onclick="swapUnit()">0km/h</span>
-        <input type="file" name="imposter" id="imposter">
+        <input type="file" name="imposter" id="imposter" accept="image/*">
         <div id="tweet">
           <a
             href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fslapchris.com&amp;text=I%20slapped%20Chris%20Rock%200km%2Fh%21&amp;hashtags=SlapChrisRock"
