--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     />
     <link rel="manifest" href="https://slapchris.com/assets/site.webmanifest" />
     <link rel="stylesheet" href="style.css?v=1.5" />
-    <title>How fast can you slap Chris Rock?</title>
+    <title>Slap Omor & 69 others</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
@@ -77,7 +77,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://slapchris.com" />
-    <meta property="og:title" content="How fast can you slap Chris Rock?" />
+    <meta property="og:title" content="Slap Omor & 69 others" />
     <meta
       property="og:description"
       content="The fastes slaps require the strongest Wills. Unleash your inner Slap Smith and see how fast you can slap Chris Rock."
@@ -90,7 +90,7 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://slapchris.com" />
-    <meta name="twitter:title" content="How fast can you slap Chris Rock?" />
+    <meta name="twitter:title" content="Slap Omor & 69 others" />
     <meta
       name="twitter:description"
       content="The fastes slaps require the strongest Wills. Unleash your inner Slap Smith and see how fast you can slap Chris Rock."
